# earth_rover_localization

./: .gitmodules  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  docker_readme.md  xsens.yaml
development_notes/: ros_answers.md
earth_rover_bed_detection/: CMakeLists.txt  package.xml
earth_rover_bed_detection/cfg/: bed_detector_params.yaml
earth_rover_bed_detection/config/: bed_detection.yaml
earth_rover_bed_detection/launch/: bed_detection.launch  rosbag_play.launch
earth_rover_bed_detection/src/: bed_detection_node.cpp  earth_rover_bed_detection_node.cpp
earth_rover_localisation/: README.md
earth_rover_localisation/cfg/: ekf_imu_heading_localization.yaml  enu_origin.yaml
earth_rover_localisation/launch/: er_localization_player.launch  (+4 more)
earth_rover_localization/: 99-freewave-radio.rules  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
earth_rover_localization/cfg/: datum.yaml  ekf_global_rover_localization.yaml  ekf_global_rover_visual_odometry.yaml  ekf_global_tractor_localization.yaml  ekf_imu_heading_localization.yaml  ekf_local_rover_localization.yaml  ekf_local_rover_visual_odometry.yaml  ekf_visual_odometry_params.yaml  enu_origin.yaml  enu_origin.yaml.save  imu.yaml  local_xy_origins.yaml  mapviz_localization_rover_config.mvc  piksi_multi_driver_settings_rover_attitude.yaml  piksi_multi_driver_settings_rover_reference.yaml  piksi_multi_driver_settings_roverserial.yaml  rover_localization.yaml
earth_rover_localization/cmake/Modules/: FindGeographicLib.cmake
earth_rover_localization/docs/: robot_localization_documentation.md
earth_rover_localization/launch/: .rover_localization_node.launch.swp  autonomous_scouting_localization.launch  datum_init.launch  depth_image_proc.launch  ekf.launch  er_common.launch  er_ekf_visual_odometry.launch  er_localization_node.launch  er_localization_player.launch  er_localization_rover.launch  er_localization_rover_navigation.launch  er_localization_rover_node.launch  er_localization_set_datum.launch  er_localization_viztools.launch  er_rtabmap.launch  er_rtabmap_node.launch  er_visual_odometry.launch  first_RTK.launch  gps_latency.launch  imu_piksy_drivers.launch  localization_simulation.launch  mapviz.launch  piksi_multi_rover_attitude.launch  piksi_multi_rover_reference.launch  robot_localization.launch  robot_localization_node.launch  rosbag_play.launch  rover_localization_node.launch  rover_localization_node.launch.save  rover_localization_node.launch.save.1  sbp_arbitrator.launch  scouting_localization.launch  scouting_localization_node.launch  simulation_visual_odometry.launch  start_localization_node.launch  visual_odometry_scouting.launch  xsens.launch
earth_rover_localization/mapviz_config/: er_localization_config.mvc
earth_rover_localization/scripts/: get_first_RTK.py  install_sbp.sh  sbp_arbitrator.py  start_localization.sh  wait_RTK_fix.py
earth_rover_localization/src/: heading_listener.cpp  local_transform.cpp  remove_gps_latency.cpp  remove_latency.cpp  set_initial_state_filter.cpp  visual_odometry_transform.py
er_localisation/: CMakeLists.txt  README.md  package.xml
(+19 files in other folders)
