<?xml version="1.0"?>
<package format="2">
  <name>earth_rover_localization</name>
  <version>1.2.0</version>
  <description>Configuration for the EKF of the robot_localization package to use with the Earth Rover Open Agribot. </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="andres@earthrover.cc">Andres Palomino</maintainer>
  <maintainer email="ricard@earthrover.cc">Ricard Pardell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->  
  <url type="website">http://open.earthrover.cc/</url>
  <url type="website">http://wiki.ros.org/earth_rover_localization</url>
  <url type="repository">https://github.com/earthrover/earth_rover_localization.git</url>
  <url type="bugtracker">https://github.com/earthrover/earth_rover_localization/issues</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>  
    
  <!-- system dependencies -->
  <build_depend>geographiclib</build_depend>
  <build_export_depend>geographiclib</build_export_depend>
  <build_depend>geographiclib-tools</build_depend>
  <build_export_depend>geographiclib-tools</build_export_depend>

  <!-- packages -->
  <build_depend>rospy</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>   
  <build_export_depend>robot_localization</build_export_depend> 
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf</exec_depend> 
  <build_depend>piksi_multi_rtk</build_depend>
  <build_export_depend>piksi_multi_rtk</build_export_depend>
  <exec_depend>piksi_multi_rtk</exec_depend>

  <!-- message packages -->
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>piksi_rtk_msgs</build_depend>
  <build_export_depend>piksi_rtk_msgs</build_export_depend>
  <exec_depend>piksi_rtk_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
